packages/rspack-test-tools/tests/configCases/errors/module-build-error/loader.js
module.exports = function loader() {
    const error = new Error("Custom mesasge");
    error.name = "CustomError";
    throw error;
}
